Script type module

--- a/MVC.Budget.Ananttuli/Budget/Views/Shared/_Layout.cshtml
+++ b/MVC.Budget.Ananttuli/Budget/Views/Shared/_Layout.cshtml
@@ -29,18 +29,12 @@
             @RenderBody()
         </main>
     </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - Budget - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+    
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <partial name="_ValidationScriptsPartial" />
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    
+    <script src="~/js/site.js" asp-append-version="true" type="module"></script>
 
 </body>
 
