--- a/MVC.Budget.Ananttuli/Budget/Views/Transactions/_PartialEditTransactionModalView.cshtml
+++ b/MVC.Budget.Ananttuli/Budget/Views/Transactions/_PartialEditTransactionModalView.cshtml
@@ -1,16 +1,17 @@
 @model UpsertTransactionViewModel
 
 
-@if(Model.Transaction is null)
+@if (Model.Transaction is null)
 {
     <h3>Not Found</h3>
-} else
+}
+else
 {
     <form id="update-transaction-form" action="/Home/UpdateTransaction" method="post" onsubmit="updateTransaction(event)">
         @Html.AntiForgeryToken()
-        <input type="hidden" asp-for="Transaction!.Id" />
+        <input type="hidden" asp-for="Transaction!.Id"/>
         <div class="row">
-            <partial name="_PartialUpsertTransactionDetails" for="@Model" />
+            <partial name="_PartialUpsertTransactionDetails" for="@Model"/>
 
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
