--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_CategoryModals.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_CategoryModals.cshtml
@@ -43,6 +43,7 @@
                         <input type="hidden" asp-for="FiscalPlanId" value="" id="updateCategory_fiscalPlanId" />
                         <input type="hidden" asp-for="Id" value="" id="updateCategory_id"/>
                         <input type="hidden" asp-for="CategoryType" value="" id="updateCategory_type" name="type" />
+                        <input type="hidden" value ="" id="updateCategory_month"/>
                         <div class="form-group">
                             <label asp-for="Name" class="control-label"></label>
                             <input asp-for="Name" class="form-control" id="updateCategory_name"/>
