--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/site.scss
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/site.scss
@@ -2,10 +2,14 @@
 
 //Variables
 $primary: #020403;
-$secondary: #1c1c1c;
+$secondary: #475456;
 $body-color: white;
 $body-bg: $primary;
 $borderWidth: 4px;
+$border-radius: 10px;
+$small-screen-query: 576px;
+$big-screen-query: 1400px;
+$box-shadow: rgba(0, 0, 0, 0.17) 2px 2px 5px 2px;
 
 $accordion-bg: $secondary;
 $accordion-button-active-bg: $secondary;
@@ -13,7 +17,7 @@ $accordion-button-active-color: white;
 $accordion-icon-active-color: white;
 $accordion-body-padding-y: 8px;
 $accordion-body-padding-x: 10px;
-$accordion-border-radius: 10px;
+$accordion-border-radius: $border-radius;
 $accordion-button-icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 15 15' fill='white'%3E%3Cdefs%3E%3CradialGradient id='gradient1' x1='0' x2='1' y1='0' y2='1'%3E%3Cstop offset='0%25' stop-color='%23CCFBE5' /%3E%3Cstop offset='50%25' stop-color='%23A2D6CB' /%3E%3Cstop offset='100%25' stop-color='%237EB1B1' /%3E%3C/radialGradient%3E%3C/defs%3E%3Cpath fill='url(%23gradient1)' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
 $accordion-icon-width: 20px;
 $accordion-icon-transition: transform 0.3s ease-in-out;
@@ -27,6 +31,8 @@ $table-bg: $secondary;
 $pagination-bg: white;
 $pagination-disabled-color: #BDC3C7;
 
+$modal-content-bg: $secondary;
+
 // Configuration
 @import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/variables-dark";
@@ -38,7 +44,7 @@ $pagination-disabled-color: #BDC3C7;
 @import "../../node_modules/bootstrap/scss/root";
 @import "../../node_modules/bootstrap/scss/reboot";
 @import "../../node_modules/bootstrap/scss/type";
-@import "../../node_modules/bootstrap/scss/images";
+//@import "../../node_modules/bootstrap/scss/images";
 @import "../../node_modules/bootstrap/scss/containers";
 @import "../../node_modules/bootstrap/scss/grid";
 @import "../../node_modules/bootstrap/scss/tables";
@@ -76,27 +82,54 @@ $pagination-disabled-color: #BDC3C7;
 // --- Custom Styles ---
 
 body {
+    height: 100vh;
     color: white;
     margin: 0;
     padding: 0;
     background-image: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
     background-size: cover;
     background-position: center;
+    overflow: hidden;
 }
 
 .form-control {
-    background-color: white;
-    color: black;
+    background-color: white !important;
+    color: black !important;
+    border: none;
+}
+
+.form-control:focus {
+    border: none;
+    box-shadow:  #A2D6CB 0 0 2px 3px;
 }
 
 .form-select {
     background-color: white;
     color: black;
+    border: none;
+}
+
+.form-select:focus {
+    border: none;
+    box-shadow: #A2D6CB 0 0 2px 3px;
+}
+
+.submit-btn {
+    border-radius: $border-radius;
+    padding: 4px;
+    width: 100px;
+    border: none;
+    color: white;
+    background: linear-gradient(45deg, #7EB1B1, #608C94, #456977);
+}
+
+.submit-btn:hover {
+    box-shadow: #A2D6CB 0 0 2px 3px;
 }
 
 ::-webkit-scrollbar {
-    width: 5px;
-    padding-left: 10px;
+    width: 6px;
+    height: 6px;
 }
 
 ::-webkit-scrollbar-track {
@@ -148,7 +181,17 @@ body {
 
 //Navbar
 
-.navbar { 
+.navbar-container {
+    display: flex;
+    flex-wrap: inherit;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    max-width: calc(100% - 40px);
+    margin-left: auto;
+    margin-right: auto;
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
 }
 
 .navbar-brand, .nav-link {
@@ -169,61 +212,30 @@ body {
 }
 
 .country-list {
-    z-index: 100;
+    min-width: 239px;
 }
 
-//Sidebar
-
-.sidebar {
-    z-index: 1;
-    background-color: #198754;
-    position: fixed;
-    right: 0px;
-    height: 100%;
-    overflow: hidden;
-    display: flex;
-}
-
-.sidebar-container {
-    margin: 70px 0 0 0;
-    width: 200px;
-    opacity: 1;
-    transition: width ease 0.5s, opacity ease-in 0.5s;
-    z-index: 11;
-}
-
-.sidebar-caret {
-    margin-top: auto;
-    margin-bottom: auto;
-    transform: rotate(270deg);
-    transition: transform linear 0.5s;
-}
-
-.sidebar li {
-    list-style-type: none;
-    white-space: nowrap;
-}
-
-.collapsed > .sidebar-container {
-    width: 0;
-    opacity: 0;
-}
-
-.collapsed > .sidebar-caret {
-    transform: rotate(90deg);
+.country-list::-webkit-scrollbar-thumb {
+    background: $secondary;
+    border-radius: 5px;
 }
 
 // Action sidebar
 
+$sidebar-padding: 5px;
+$sidebar-icon-size: 50px;
+$sidebar-gap: 8px;
+
 #action-sidebar {
-    position: fixed;
-    left: 0px;
-    top: 50%;
-    z-index: 500;
-    transform: translateY(-50%);
     display: flex;
-    flex-direction: column;
-    row-gap: 5px;
+    position: fixed;
+    flex-direction: row;
+    justify-content: space-evenly;
+    z-index: 100;
+    top: calc(100% - #{$sidebar-icon-size + $sidebar-padding * 2});
+    padding: $sidebar-padding;
+    gap: 8px;
+    width: 100%;   
 }
 
 .sidebar-button-container {
@@ -235,17 +247,12 @@ body {
     cursor: pointer;
 }
 
-#reevaluation-button {
-    width: 45px;
-    height: 45px;
+#home-button {
+    width: 50px;
+    height: 50px;
 }
 
-#statistics-button {
-    width: 45px;
-    height: 45px;
-}
-
-#search-button {
+.sidebar-button {
     width: 45px;
     height: 45px;
 }
@@ -329,8 +336,7 @@ body {
 // Main Container
 
 .main-container {
-    height: calc(100vh - 56px);
-    width: 100vw;
+    height: calc(100vh - 116px);
     padding-right: 0;
     padding-left: 0;
 }
@@ -367,6 +373,10 @@ main {
     transform: rotateY(calc(90deg * var(--s))) translateZ(calc(55vw));   
 }
 
+.visible-face {
+    z-index: 100;
+}
+
 .content-outer-container {
     height: 100%;
     overflow: hidden;
@@ -380,6 +390,10 @@ main {
     mask-position: center;
     mask-repeat: no-repeat;
     mask-composite: add;
+
+    @-moz-document url-prefix() {
+        scrollbar-width: thin;
+    }
 }
 
 .content-container {
@@ -389,26 +403,12 @@ main {
 // Home
 
 .dashboard {
-    border-radius: 10px;
-    padding: 10px;
-    background-color: $secondary;
     position: relative;
-    background-clip: padding-box;
-    border: solid $borderWidth transparent;
+    padding: 10px;
     min-height: 328px;
-}
-
-.dashboard:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-    margin: -$borderWidth;
-    border-radius: inherit;
-    background: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
+    border-radius: $border-radius;
+    background-color: $secondary;
+    box-shadow: $box-shadow;
 }
 
 .dashboard-container {
@@ -429,27 +429,13 @@ main {
 
 .accordion {
     cursor: pointer;
-    background-clip: padding-box;
-    border: solid $borderWidth transparent;
     position: relative;
-    border-radius: 10px;
-}
-
-.accordion:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-    margin: -$borderWidth;
-    border-radius: inherit;
-    background: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
+    border-radius: $border-radius;
+    box-shadow: $box-shadow;    
 }
 
 .accordion-item {
-    border-radius: 6px !important;
+    border-radius:inherit;
     border: none;
 }
 
@@ -460,6 +446,7 @@ main {
 
 .accordion-header {
     padding: 5px 5px 5px 10px;
+    text-align: center;
 }
 
 .accordion-caret {
@@ -484,21 +471,21 @@ main {
     z-index: 0;
     padding: 2px;
     overflow: hidden;
-    border-radius: 10px;
+    border-radius: $border-radius;
 }
 
 .content {
     position: relative;
     z-index: 10;
     padding: 0 5px 5px 5px;
-    border-radius: 10px;
+    border-radius: $border-radius;
     background-color: $secondary;
 }
 
 .category-body {
     min-height: 30px;
     background-color: $secondary;
-    border-radius: 10px;
+    border-radius: $border-radius;
     display: flex;
     align-items: center;
 }
@@ -519,6 +506,19 @@ main {
     background: radial-gradient(circle, #CCFBE5 0%, #7EB1B1 25%, #608C94 50%, #7EB1B1 75%, #CCFBE5 100%);
     animation: rotate 4s cubic-bezier(.8, 0, 0.2, 1) infinite;
     opacity: 1;
+}
+
+.category-body-content {
+    min-width: calc(100% / 3);
+    flex-grow: 1;
+}
+
+.deviation {
+    text-align: center;
+}
+
+.balance {
+    text-align: right;
 }
 
 .deviation-text {
@@ -542,6 +542,7 @@ main {
 #reevalCategories-container {
     display: grid;
     gap: 1rem;
+    position: relative;
 }
 
 #reevalInfo {
@@ -551,7 +552,7 @@ main {
     width: 75%;
     transform: translate(-50%, -50%);
     border: groove 2px #d3d3d3;
-    border-radius: var(--bs-border-radius);
+    border-radius: $border-radius;
     text-align: center;
     background-color: $secondary;
 }
@@ -620,25 +621,11 @@ main {
 // Statistics
 
 .Charts-container {
-    border-radius: 10px;
+    border-radius: $border-radius;
     margin-top: 10px;
     display: flex;
     position: relative;
-    background-clip: padding-box;
-    border: solid $borderWidth transparent;
-}
-
-.Charts-container:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-    margin: -$borderWidth;
-    border-radius: inherit;
-    background: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
+    box-shadow: $box-shadow;
 }
 
 .lineChart-container {
@@ -646,16 +633,15 @@ main {
     padding: 2px;
     min-height: 250px;
     background-color: $secondary;
-    border-radius: var(--bs-border-radius);
+    border-radius: $border-radius;
 }
 
 .overspendingChart-container {
     width: 100%;
-    width: 100%;
     padding: 2px;
     min-height: 320px;
     background-color: $secondary;
-    border-radius: var(--bs-border-radius);
+    border-radius: $border-radius;
 }
 
 // Search Transactions
@@ -663,65 +649,27 @@ main {
 .filter-container {
     position: relative;
     padding: 10px;
-    border-radius: 10px;
-    background-clip: padding-box;
+    border-radius: $border-radius;
     background-color: $secondary;
-    border: solid $borderWidth transparent;
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 2px 1px;
 }
 
-.filter-container::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-    margin: -$borderWidth;
-    border-radius: inherit;
-    background: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
+#filter-accordion {
+    box-shadow: none;
+}
+
+.filter-content-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 15px;
 }
 
 .category-select {
     min-width: 50px;
-    border-radius: var(--bs-border-radius);
-}
-
-
-
-.irs {
-    flex-grow: 1;
-    margin-right: 5px;
-}
-
-.irs-from, .irs-to, .irs-single {
-    background-color: #CCFBE5 !important;
-    border-radius: 10px;
-    color: black !important;
-}
-
-.irs-bar {
-    background-color: #CCFBE5 !important;
-}
-
-.irs-handle {
-    border: 3px solid #CCFBE5 !important;
-}
-
-.irs--square .irs-handle {
-    background-color: #456977 !important;
-}
-
-#maxAmount, #minAmount {
-    max-width: 75px;
-    text-align: center;
-    border-radius: var(--bs-border-radius);
-}
-
-#minDate, #maxDate {
-    max-width: 150px;
-    border-radius: var(--bs-border-radius);
-    display: inline;
+    width: fit-content;
+    max-width: 100%;
+    border-radius: $border-radius;
 }
 
 .inputs-container {
@@ -731,9 +679,15 @@ main {
     gap: 15px;
 }
 
-.slider-container {
+.input-group-container {
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.input-container {
+    flex-grow: 1;
+    min-width: 205px;
 }
 
 #transactions-table_wrapper th {
@@ -759,7 +713,7 @@ main {
 #transactions-table tr:hover .table-icon {
     fill: url(#icon_gradient);
     opacity: 1;
-    transform: scale(1.15);
+    transform: scale(1.12);
     transition: transform 0.3s cubic-bezier(0.64, 0.57, 0.67, 1.3), opacity 0.3s ease-out;
 }
 
@@ -772,10 +726,6 @@ main {
 
 // Budget Selection
 
-#fiscalPlans-container {
-    
-}
-
 .cards-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -787,14 +737,14 @@ main {
     background-color: $secondary;
     padding: 15px;
     height: 200px;
-    border-radius: var(--bs-border-radius);
+    border-radius: $border-radius;
 }
 
 .add-fiscalPlan-card {
     background-color: transparent;
     padding: 20px;
     height: 200px;
-    border-radius: var(--bs-border-radius);
+    border-radius: $border-radius;
     border: 4px solid $secondary;
     cursor: pointer;
 }
@@ -806,18 +756,6 @@ main {
     width: 100%;
 }
 
-// Transaction (Details)
-
-.transaction-date {
-    margin-left: auto;
-    min-width: 80px;
-    text-align: end;
-}
-
-.transaction-value {
-    min-width: 80px;
-    text-align: end;
-}
 // Modals
 
 .form-group {
@@ -856,5 +794,38 @@ main {
 
     to {
         transform: rotate(180deg);
+    }
+}
+
+// Media Queries
+
+
+@media (min-width: $small-screen-query) {
+    #action-sidebar {
+        width: $sidebar-padding * 2 + $sidebar-icon-size;
+        left: 0px;
+        top: calc(50% - calc(($sidebar-icon-size * 4 + $sidebar-gap * 3 + $sidebar-padding * 2) / 2));
+        flex-direction: column;
+        justify-content: unset;
+        border-radius: 0 $border-radius $border-radius 0;
+    }
+
+    .main-container {
+        height: calc(100vh - 56px);
+        max-width: calc(100% - 80px);
+    }
+
+    .navbar-container {
+        max-width: calc(100% - 120px);
+    }
+}
+
+@media (min-width: $big-screen-query) {
+    .main-container {
+        max-width: 1320px;
+    }
+
+    .navbar-container {
+        max-width: 1320px;
     }
 }
