--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/_ViewImports.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using MVC.Budget.K_MYR
 @using MVC.Budget.K_MYR.Models
+@using MVC.Budget.K_MYR.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
